# HelloSDL

./: CMakeLists.txt  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  LoaderParams.cpp  LoaderParams.h  Player.cpp  Player.h  README.md  SDLGameObject.cpp  SDLGameObject.h  TextureManager.cpp  TextureManager.h  main.cpp
res/xml/: test.xml
src/: Button.cpp  Button.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameObject.h  GameState.h  GameStateMachine.cpp  InputHandler.cpp  InputHandler.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h  PlayState.cpp  PlayState.h  Player.cpp  Player.h  SDLGameObject.cpp  SDLGameObject.h  TextureManager.cpp  TextureManager.h  Vector2D.h  main.cpp
src/entity/: AnimatedGraphic.cpp  AnimatedGraphic.h  BaseCreator.h  GameObject.h  GameObjectFactory.cpp  GameObjectFactory.h  Projectile.cpp  Projectile.h  ProjectileHandler.cpp  ProjectileHandler.h  SDLGameObject.cpp  SDLGameObject.h  Text.cpp  Text.h  TileMap.cpp  TileMap.h  VanityItem.cpp  VanityItem.h
src/entity/mob/: Enemy.cpp  Enemy.h  Player.cpp  Player.h
src/factory/: BaseCreator.h  GameObjectFactory.cpp  GameObjectFactory.h
src/graphics/: TextureManager.cpp  TextureManager.h
src/input/: Button.cpp  Button.h  InputHandler.cpp  InputHandler.h
src/state/: GameOverState.cpp  GameOverState.h  GameStateMachine.cpp  MainMenuState.cpp  MainMenuState.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h  PlayState.cpp  PlayState.h  StateParser.cpp  StateParser.h
src/utilities/: LoaderParams.h  SoundManager.cpp  SoundManager.h  Vector2D.h
src/xml/: tinyxml.h
