cmake_minimum_required(VERSION 3.7)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -w -lSDL2 -lSDL2_image -lSDL2_mixer -ltinyxml")
project(HelloSDL)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
find_package(SDL2 REQUIRED)
find_package(SDL2_image REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS})
add_executable(HelloSDL src/main.cpp src/Game.h src/Game.cpp src/graphics/TextureManager.h src/graphics/TextureManager.cpp src/entity/mob/Player.cpp src/entity/mob/Player.h src/entity/GameObject.h src/entity/mob/Enemy.cpp src/entity/mob/Enemy.h src/utilities/LoaderParams.h src/entity/SDLGameObject.cpp src/entity/SDLGameObject.h src/utilities/Vector2D.h src/input/InputHandler.cpp src/input/InputHandler.h src/input/Button.cpp src/input/Button.h src/state/GameState.h src/state/MainMenuState.cpp src/state/MainMenuState.h src/state/PlayState.cpp src/state/PlayState.h src/state/GameStateMachine.cpp src/state/GameStateMachine.h src/state/PauseState.cpp src/state/PauseState.h src/entity/AnimatedGraphic.cpp src/entity/AnimatedGraphic.h src/state/GameOverState.cpp src/state/GameOverState.h src/factory/GameObjectFactory.h src/factory/GameObjectFactory.cpp src/state/StateParser.cpp src/state/StateParser.h src/state/MenuState.h src/utilities/SoundManager.cpp src/utilities/SoundManager.h)
target_link_libraries(HelloSDL ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES} )